--- a/project.html
+++ b/project.html
@@ -23,6 +23,8 @@
 	  <li><h5><a href="database.html">Databases</a></h5></li>
 	  <li><h5><a href="documentation.html">Documentation</a></h5></li>
       <li><h5><a href="aboutme.html">Dev Team</a></h5></li>
+	    <li><h5><a href="about me.html">Resume</a></h5></li>
+	      <li><h5><a href="Resume.html">Resume</a></h5></li>
     </ul>
   </nav>
   
