--- a/concepts.html
+++ b/concepts.html
@@ -27,7 +27,7 @@
   </nav>
   
   <article>
-  <center> <a href="https://docs.google.com/presentation/d/1U9iXLG5U7AraTIjt5SQsIQRBqt_v-x6M59IeAXXUDR0/edit?usp=sharing"><img src="concepts.PNG" alt="Concepts" width="515" height="290" ></a>
+  <center> <a href="https://docs.google.com/presentation/d/1X8Tk6H-v3Xi7TE4313mS9YG-O8h8qW_aS36HYkV6atY/edit#slide=id.p"><img src="concepts.PNG" alt="Concepts" width="515" height="290" ></a>
    <p></p>
 
     <p>Click on the image above for presentation.</p>
